# textual-todos

./: .gitignore  README.md  config.py  database.py  main.py  models.py  pyproject.toml  style.tcss  widgets.py
src/state/: __init__.py  actions.py  connect.py  reducer.py  state.py  store.py
ui/: __init__.py  delete_dialog.py  edit_dialog.py  project_list.py  settings_dialog.py  task_list.py  task_types.py  task_view.py
